--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,25 @@
 * {
-	text-align: center;
 	color: white;
 }
-
 body {
-	background-image: url(../img/logo.jpg), url(../img/logo.jpg);
-	background-repeat: no-repeat;
-	background-position: 0% 50%, 100% 50%;
-	background-attachment: fixed;
 	background-color: black;
 }
 
-header {
-	position: fixed;
-	left: 0;
-	top: 0;
-	width: 100%;
-	background-color: red;
+#HeaderImg {
+	float: left;
+}
+
+#HeaderContent {
+	padding: 11.5px;
+	background-color: #272d35;
 }
 
 footer {
+	padding: 3px;
 	position: fixed;
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	background-color: red;
+	background-color: #272d35;
+	text-align: center;
 }
