--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
+body{background-image: url("../img/a.jpg");}
 * {
 	box-sizing: border-box;
-	text-align: center;
+
+}
+
+body {	
+	background-image: url("../img/a.jpg");
 }
 
 #headerImg {
@@ -16,13 +21,14 @@
 #content {
 	margin-left: 70px;
 	margin-right: 70px;
+	
 }
 
 #sideContent {
-	background-color: blue;
+	background-color: #d43d2c;
 	width: 35%;
     	float: left;
-	border: 5px solid black;
+	border: 5px solid #272d35;
 	padding-left: 4px;
 	padding-right: 4px;
 }
@@ -33,7 +39,7 @@
 	width: 65%;
 	padding-left: 4px;
     padding-right: 4px;
-    border: 5px solid red;
+    border: 5px solid #272d35;
 }
 
 footer {
