--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,59 @@
-body{background-image: url("../img/a.jpg");}
 * {
-	box-sizing: border-box;
-
+  box-sizing: border-box;
 }
 
-body {	
-	background-image: url("../img/a.jpg");
+body {  
+  background-image: url("../img/background.jpg");
+}
+
+h1, h2 {
+  text-align: center;
+}
+
+p {
+  text-align: justify;
 }
 
 #headerImg {
-	float: left;
+  float: left;
 }
 
 #headerContent {
-	background-color: #272d35;
-	color: white;
-	padding: 12px;
+  background-color: #272d35;
+  color: white;
+  padding: 12px;
 }
 
 #content {
-	margin-left: 70px;
-	margin-right: 70px;
-	
+  margin-left: 70px;
+  margin-right: 70px;
 }
 
 #sideContent {
-	background-color: #d43d2c;
-	width: 35%;
-    	float: left;
-	border: 5px solid #272d35;
-	padding-left: 4px;
-	padding-right: 4px;
+  background-color: #d43d2c;
+  width: 35%;
+  float: left;
+  border: 5px solid #272d35;
+  padding-left: 4px;
+  padding-right: 4px;
 }
 
 #mainContent {
-	background-color: yellow;
-	float: left;
-	width: 65%;
-	padding-left: 4px;
-    padding-right: 4px;
-    border: 5px solid #272d35;
+  background-color: yellow;
+  float: left;
+  width: 65%;
+  padding-left: 4px;
+  padding-right: 4px;
+  border: 5px solid #272d35;
 }
 
 footer {
-	color: white;
-	padding: 3px;
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	background-color: #272d35;
-	text-align: center;
+  color: white;
+  padding: 3px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #272d35;
+  text-align: center;
 }
