--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,11 @@
 	box-sizing: border-box;
 }
 
-html {
+html, body {
 	background-image: url("../img/background.png");
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 h1, h2 {
@@ -12,20 +15,28 @@ h1, h2 {
 
 p {
 	text-align: justify;
-	font-family: Helvetica;
+	text-indent: 50px;
+	font-family: 'Poppins', sans-serif;
 }
 
 #headerImg {
 	float: left;
-	margin-left: 75px;
+	margin-top: 10px;
+	margin-left: 15px;
 }
 
 #headerContent {
-	margin-left: 70px;
-	margin-right: 70px;
-	background-color: #272d35;
+	font-family: 'Poppins', sans-serif;
+	background-color: black;
 	color: white;
 	padding: 12px;
+}
+
+#titleContent {
+	text-shadow: -1px -1px 0 #75171B,  
+    1px -1px 0 #75171B,
+    -1px 1px 0 #75171B,
+     1px 1px 0 #75171B;
 }
 
 #content {
@@ -38,16 +49,17 @@ p {
 	width: 35%;
 	float: left;
 	border: 5px solid #272d35;
-	padding-left: 4px;
-	padding-right: 4px;
+	padding-left: 10px;
+	padding-right: 10px;
+	min-height: 100vh;
 }
 
 #mainContent {
 	background-color: #d42222;
-	float: left;
+	float: right;
 	width: 65%;
-	padding-left: 4px;
-	padding-right: 4px;
+	padding-left: 10px;
+	padding-right: 10px;
 	border: 5px solid #272d35;
 }
 
