--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,12 @@
 
 html, body {
 	background-image: url("../img/background.png");
-	height: 100%;
 	margin: 0;
 	padding: 0;
+	scroll-behavior: smooth;
 }
 
-h1, h2 {
+#content h1, #content h2 {
 	text-align: center;
 }
 
@@ -26,32 +26,54 @@ p {
 }
 
 #headerContent {
+	text-align: left;
 	font-family: 'Poppins', sans-serif;
 	background-color: black;
 	color: white;
 	padding: 12px;
 }
 
-#titleContent {
-	text-shadow: -1px -1px 0 #75171B,  
-    1px -1px 0 #75171B,
-    -1px 1px 0 #75171B,
-     1px 1px 0 #75171B;
+#headerMenu {
+	font-size: 30px;
+	float: right;
+	padding-right: 40px;
+	padding-top: 40px;
+}
+
+#headerMenu a {
+	border: 2px solid #d42222;
+	margin: auto 10px auto 10px;
+	padding: 15px 20px;
+	text-decoration: none;
+}
+
+a:link {
+	color: white;
+}
+
+a:visited {
+	color: white;
+}
+
+a:hover {
+	color: white;
+	background-color: #d42222;
 }
 
 #content {
 	margin-left: 70px;
 	margin-right: 70px;
+	min-height: 100%;
 }
 
 #sideContent {
-	background-color: #d43d2c;
+	background-color: #d42222;
 	width: 35%;
 	float: left;
 	border: 5px solid #272d35;
 	padding-left: 10px;
 	padding-right: 10px;
-	min-height: 100vh;
+	min-height: 100%;
 }
 
 #mainContent {
@@ -63,7 +85,7 @@ p {
 	border: 5px solid #272d35;
 }
 
-#contentImg {
+#content img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
@@ -71,11 +93,11 @@ p {
 
 footer {
 	color: white;
-	padding: 3px;
+	padding: 5px;
 	position: fixed;
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	background-color: #272d35;
+	background-color: black;
 	text-align: center;
 }
